Updated contact page and fixed layout issues

--- a/style.css
+++ b/style.css
@@ -186,9 +186,10 @@ header{
 }
 
 .header-image-box{
-    flex: 1;
-    display: flex;
-    justify-content: center;
+    width:100%;
+    max-width:900px;
+    flex:1;
+    display:flex;
     animation: float 4s ease-in-out infinite;
 }
 
@@ -203,10 +204,12 @@ header{
 ========================================== */
 
 .line{
-    width: 120px;
+    width: 200px;
     height: 4px;
+    background: 0c3253;
+    margin: 0 auto 35px;
+    border-radius: 5px;
     background: #0c3253;
-    margin: 12px 0;
     border-radius: 10px;
 }
 
@@ -269,6 +272,7 @@ section{
 }
 
 .subtitle{
+    text-align: center;
     font-size:1.9rem;
     color:#0c3253;
     font-weight:700;
@@ -305,7 +309,9 @@ section{
     box-shadow:0 8px 20px rgba(0,0,0,.08);
     text-align:center;
 }
-
+.bx {
+    color: goldenrod;
+}
 .stat h2{
     color: goldenrod;
     font-size:35px;
@@ -322,10 +328,12 @@ section{
 }
 
 .about-image img{
-    width:190%;
-    max-width:520px;
-    border-radius:30px;
-    box-shadow:0 15px 35px rgba(0,0,0,.15);
+    width:100%;
+    max-width:700px;
+    border-radius:20px;
+    display: flex;
+    justify-content: center;
+    animation: float 4s ease-in-out infinite;
 }
 
 @media(max-width:900px){
@@ -477,7 +485,7 @@ section{
 .input-box textarea{
     width: 100%;
     padding: 12px 12px 12px 40px;
-    border: 1px solid #d1d5db;
+    border: 1px solid #05224c;
     border-radius: 10px;
     outline: none;
     font-size: 1rem;
@@ -501,10 +509,25 @@ section{
     font-size: 0.9rem;
     margin-bottom: 20px;
 }
+.remember-forget a{
+    color: #000;
+}
 
+.remember-forget label{
+    color: #670606;
+    font-weight: 500;
+
+}
 .register-link{
     text-align: center;
     margin-top: 20px;
+}
+.register-link a{
+    color: #000;
+}
+.register-link label{
+    color: #5b0606;
+    font-weight: 500;
 }
 /* =========================
    FOOTER
@@ -523,15 +546,17 @@ section{
 .footer-box h2{
     margin-bottom: 20px;
     font-size: 1.5rem;
+    color: goldenrod;
 }
 
 .footer-box li,
 .footer-box p{
     margin-bottom: 10px;
+    color: goldenrod;
 }
 
 .footer-box a{
-    color: #dbeafe;
+    color: goldenrod;
     transition: 0.3s;
 }
 
@@ -562,16 +587,16 @@ footer{
 
 .footer-box ul li i{
     font-size: 20px;
-    color: #fff;  
+    color: goldenrod;  
 }
 
 .footer-box ul li a{
-    color: #fff;
+    color: goldenrod;
     text-decoration: none;
 }
 
 .footer-box ul li a:hover{
-    color: #ffd700;
+    color: white;
 }
 /* =========================
    ABOUT SECTION
@@ -989,8 +1014,15 @@ footer{
     color:#fff;
 }
 
+.dark-mode .footer-box h2,
+.dark-mode .footer-box li,
+.dark-mode .footer-box a,
+.dark-mode .footer-box ul li a{
+    color: goldenrod;
+}
+
 .dark-mode .navbar{
-    background:#1b1b1b;
+    background:#0b377e;
 }
 
 .dark-mode header{
@@ -1005,13 +1037,13 @@ footer{
 .dark-mode .stat-box,
 .dark-mode .wrapper-login,
 .dark-mode .wrapper-contact{
-    background:#1f1f1f;
+    background:#5c86df;
     color:#fff;
 }
 
 .dark-mode .footer,
 .dark-mode footer{
-    background:#111;
+    background:#0d4077;
 }
 
 /* General text */
@@ -1021,8 +1053,9 @@ footer{
 .dark-mode h3,
 .dark-mode h4,
 .dark-mode span,
-.dark-mode li{
-    color:#fff;
+.dark-mode li,
+.dark-mode .subtitle{
+    color:#ffffff;
 }
 
 /* Footer links only */
@@ -1053,6 +1086,7 @@ footer{
     border:1px solid #555;
 }
 
+
 /* Search */
 .search-box{
     display:none;
@@ -1063,12 +1097,12 @@ footer{
 }
 
 .dark-mode .search-box{
-    background:#1f1f1f;
+    background:#000000;
 }
 
 .dark-mode .search-box input{
-    background:#1f1f1f;
-    color:#fff;
+    background:#fffbfb;
+    color:#000000;
 }
 
 /* Outline button */
@@ -1083,8 +1117,8 @@ footer{
     color:#121212;
 }
 .dark-mode .review .box h1{
-    color: goldenrod !important;
+    color: rgb(24, 23, 21) ;
 }
 .dark-mode .review-container .box p{
-    color: floralwhite;
+    color: rgb(23, 23, 21);
 }
